--- a/css/style.scss
+++ b/css/style.scss
@@ -36,6 +36,7 @@ $default_time: .5s;
 /** Reset **/
 * {
     font-family: 'Inria Sans', sans-serif;
+    font-display: swap;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -192,9 +193,6 @@ aside {
     .social_links {
         height: 5rem;
         margin-bottom: $aside_line_space;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
         align-items: center;
         @include introMixin();
 
@@ -207,22 +205,25 @@ aside {
         }
 
         & div {
+            display: inline-block;
             width: 4rem;
             height: 4rem;
             background-color: $aside_font_color;
             color: $bg-color;
             border-radius: 50%;
+            margin-right: 1rem;
             padding-top: .5rem;
             text-align: center;
         }
 
-        a:hover, a:focus {
-            transform: scale(1.2);
-        }
+        & a {
+            transition: $default_time;
+            display: inline-block;
 
-        // & .github {
-        //     color: #333;
-        // }
+            &:hover, &:focus {
+                transform: scale(1.2);
+            }
+        }
     }
     
     .text {
@@ -594,7 +595,7 @@ main {
 
                 &.active {
                     z-index: 0;
-                    animation: clipShow .7s ease-out 1 forwards;
+                    // animation: clipShow .7s ease-out 1 forwards;
                 }
 
                 @keyframes clipShow {
