--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 /** Reset **/
 * {
   font-family: 'Inria Sans', sans-serif;
+  font-display: swap;
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
@@ -190,16 +191,6 @@ aside #contact_btn:hover, aside #contact_btn:focus {
 aside .social_links {
   height: 5rem;
   margin-bottom: 5vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -220,13 +211,21 @@ aside .social_links {
 }
 
 aside .social_links div {
+  display: inline-block;
   width: 4rem;
   height: 4rem;
   background-color: #ce8054;
   color: #233342;
   border-radius: 50%;
+  margin-right: 1rem;
   padding-top: .5rem;
   text-align: center;
+}
+
+aside .social_links a {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  display: inline-block;
 }
 
 aside .social_links a:hover, aside .social_links a:focus {
@@ -845,8 +844,6 @@ main section#projects #proj_bg {
 
 main section#projects #proj_bg.active {
   z-index: 0;
-  -webkit-animation: clipShow .7s ease-out 1 forwards;
-          animation: clipShow .7s ease-out 1 forwards;
 }
 
 @-webkit-keyframes clipShow {
