--- a/style/style.css
+++ b/style/style.css
@@ -952,10 +952,12 @@ main section#projects .nav_dots {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+  visibility: hidden;
   bottom: 10%;
 }
 
 main section#projects .nav_dots .dot {
+  visibility: visible;
   margin: 0 .5rem;
   opacity: .5;
 }
