--- a/css/style.scss
+++ b/css/style.scss
@@ -27,12 +27,6 @@ $default_time: .5s;
     }
 }
 
-@mixin Smaller {
-    @media (min-width: 567px) and (max-width: 599px) {
-        @content;
-    }
-}
-
 @mixin Landscape {
     @media screen and (orientation: landscape) {
         @content;
@@ -56,7 +50,7 @@ html {
 }
 
 body {
-    visibility: hidden;
+    display: none;
     background-color: $bg-color;
 }
 
@@ -134,14 +128,7 @@ aside {
         width: 100%;
         margin: 0;
         padding: 10%;
-        padding-top: 35%;
-    }
-
-    @include Smaller {
-        z-index: -1;
-        width: 100%;
-        margin: 0;
-        padding: 5%;
+        padding-top: 20%;
     }
 
     .title {
@@ -160,12 +147,6 @@ aside {
         }
 
         @include Small {
-            font-size: 3rem;
-            width: 70%;
-            white-space: normal;
-        }
-        
-        @include Smaller {
             font-size: 3rem;
             width: 70%;
             white-space: normal;
@@ -204,10 +185,6 @@ aside {
         @include introMixin();
 
         @include Mobile {
-            float: right;
-        }
-
-        @include Smaller {
             float: right;
         }
 
@@ -278,10 +255,6 @@ aside {
             @include Small {
                 width: 80vw;
             }
-
-            @include Smaller {
-                width: 80vw;
-            }
         }
 
         & .nav_list {
@@ -296,10 +269,6 @@ aside {
             }
 
             @include Small {
-                justify-content: space-evenly;
-            }
-
-            @include Smaller {
                 justify-content: space-evenly;
             }
 
@@ -343,10 +312,6 @@ aside {
             }
             
             @include Small {
-                display: none;
-            }
-
-            @include Smaller {
                 display: none;
             }
         }
@@ -430,12 +395,6 @@ main {
         margin-top: 100vh;
     }
 
-    @include Smaller {
-        float: left;
-        width: 100%;
-        margin-top: 100vh;
-    }
-
     section {
         width: 100%;
         height: 100vh;
@@ -478,13 +437,6 @@ main {
                     height: calc(100vh - 20rem);
                     position: absolute;
                 }
-            
-                @include Smaller {
-                    width: 100%;
-                    top: 20%;
-                    height: calc(100vh - 20rem);
-                    position: absolute;
-                }
 
                 .scene3d {
                     width: 100%;
@@ -497,6 +449,7 @@ main {
                         position: absolute;
                         width: 80%;
                         text-align: center;
+                        border-radius: 2.5rem;
                         top: 20%;
                         padding: 4% 5%;
                         background-color: $aside_font_color;
@@ -523,21 +476,14 @@ main {
             text-align: center;
 
             @include Small {
-                padding: 5rem 2%;
-                @include Landscape {
-                    overflow-y: scroll;
-                }
-            }
-
-            @include Smaller {
-                padding: 5rem 2%;
+                padding: 1rem 2%;
                 @include Landscape {
                     overflow-y: scroll;
                 }
             }
 
             @include Mobile {
-                padding: 5rem 2%;
+                padding: 3rem 2%;
                 @include Landscape {
                     overflow-y: scroll;
                 }
@@ -639,11 +585,11 @@ main {
                 color: #eee !important;
 
                 @include Mobile {
-                    margin-top: 30vh;
+                    margin-top: 35vh;
                 }
 
-                @include Mobile {
-                    margin-top: 30vh;
+                @include Small {
+                    margin-top: 35vh;
                 }
 
                 & #proj_title {
@@ -700,22 +646,15 @@ main {
         }
         
         &#contact {
-            @include Smaller {
-                padding: 5rem 3%;
-                @include Landscape {
-                    overflow-y: scroll;
-                }
-            }
-
             @include Small {
-                padding: 5rem 3%;
+                padding: 1rem 3%;
                 @include Landscape {
                     overflow-y: scroll;
                 }
             }
 
             @include Mobile {
-                padding: 5rem 3%;
+                padding: 3rem 3%;
                 @include Landscape {
                     overflow-y: scroll;
                 }
