--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
-$bg-color: #233342;//#452b4d;
-$aside_font_color: #ce8054;//rgb(255, 224, 123);
+$bg-color: #233342;
+$aside_font_color: #ce8054;
 $button_bg: #6f3637;
 $menu_bg: #4b2b31;
 $main_bg: #fff;
